<resources>
    <string name="app_name">JFFA</string>
    <string name="validar_lineas">Ingrese un numero mayor que 0</string>
    <string name="linea_text">linea </string>
    <string name="hint_numero_lineas">Ingrese un numero mayor que 0</string>
    <string name="btn_text_mostrar_lineas">Mostrar numero de lineas</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="setiembre">Setiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="validacion_numero_ingresado">El numero debe estar entre 1 y 12</string>
    <string name="hint_ingresar_numero">Ingresa un numero del 1 al 12</string>
    <string name="transformar">Transformar</string>
    <string name="text_calculadora">Calculadora</string>
    <string name="text_primer_numero">ingresar primer numero</string>
    <string name="text_segundo_numero">ingresar segundo numero</string>
    <string name="suma_signo">+</string>
    <string name="resta_signo">-</string>
    <string name="multiplicacion_signo">*</string>
    <string name="division_signo">/</string>
    <string name="hint_resultado">resultado</string>
    <string name="iniciar">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="cronometro">Cronometro</string>
    <string name="current_chrono_stopped">Chronometro actualmente parado, click en continuar</string>
    <string name="continue_chrono">Continuar</string>
    <string name="begin_chrono">Empezar chrono</string>
    <string name="chronometer_title">Cronometro</string>
    <string name="initial_chronometer">00:00:00</string>
    <string name="txt_iniciar">Iniciar</string>
    <string name="txt_pausar">Pausar</string>
    <string name="txt_reiniciar">Reiniciar</string>
    <string name="alotoftext">Far concluded not his something extremity. Want four we face an he gate. On he of played he ladies answer little though nature. Blessing oh do pleasure as so formerly. Took four spot soon led size you. Outlived it received he material. Him yourself joy moderate off repeated laughter outweigh screened.</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="three_activity">Three activity</string>
    <string name="four_activity">Four activity</string>
    <string name="five_activity">Five activity</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="txt_service_started">Service started...</string>
    <string name="txt_service_destroyed">Service destroyed...</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="txt_start_alarm">Start Alarm</string>
    <string name="txt_ejecutar_servicio">Ejecutar servicio</string>
    <string name="txt_ended_task">Tarea finalizada</string>
    <string name="txt_clase07_tarea2">Clase 07 tarea 2</string>
    <string name="txt_consultar">Cons</string>
    <string name="txt_insertar">Inse</string>
    <string name="txt_eliminar">Elim</string>
    <string name="txt_llamadas">Llama</string>
    <string name="txt_give_permission_to_app">Give permissions of Contacts and Phone in the device</string>
    <string name="txt_check_permissions"><![CDATA[Check permissions in settings->apps->app->Permissions]]></string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="txt_login">Done</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_empty">enter email</string>
    <string name="password_empty">enter password</string>
    <string name="success_login">You have login successfully</string>
    <string name="invalid_password">Invalid password</string>
    <string name="title_activity_main6">Main6Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit">Editar</string>
    <string name="action_eliminar">Eliminar</string>
    <string name="action_descartar">Descartar Cambios</string>


    <!-- Etiquetas -->
    <string name="estado_label">Estado</string>
    <string name="descripcion_label">Descripción</string>
    <string name="tecnico_label">Técnico</string>
    <string name="categoria_label">Categoría</string>
    <string name="prioridad_label">Prioridad</string>

    <!-- Arreglos para spinners -->

    <string name="descripcion_input">Descripción</string>

    <string-array name="prioridad">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <string-array name="tecnico">
        <item>Técnico #1</item>
        <item>Técnico #2</item>
        <item>Técnico #3</item>
    </string-array>

    <string-array name="categoria">
        <item>Factibilidad</item>
        <item>Mantenimiento</item>
        <item>Migración</item>
    </string-array>

    <string-array name="estado">
        <item>Abierta</item>
        <item>En Curso</item>
        <item>Cerrada</item>
    </string-array>

</resources>
