<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mabisrror.javafundamentalsforandroid.clase07.tarea3.activities.MainActivity4">

    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <Button
            android:layout_height="wrap_content"
            android:text="@string/txt_consultar"
            android:id="@+id/BtnConsultar"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/txt_insertar"
            android:id="@+id/BtnInsertar"
            android:layout_width="wrap_content" />

        <Button android:layout_height="wrap_content"
            android:text="@string/txt_eliminar"
            android:id="@+id/BtnEliminar"
            android:layout_width="wrap_content" />

        <Button android:layout_height="wrap_content"
            android:text="@string/txt_llamadas"
            android:id="@+id/BtnLlamadas"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <TextView android:id="@+id/TxtResultados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
